Primary color changing

--- a/frontend/src/components/FormCard/styles.css
+++ b/frontend/src/components/FormCard/styles.css
@@ -47,6 +47,7 @@
 
 .dsmovie-btn {
   background-color: var(--color-primary);
+  border: none;
   font-size: 14px;
   font-weight: 700;
   height: 40px;
@@ -54,4 +55,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.dsmovie-btn:hover {
+  background-color:#a82f41;
 }
