--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
 :root {
-  --color-primary: #4D41C0;
+  --color-primary: #E23E57;
 }
 
 * {
@@ -10,7 +10,7 @@
 }
 
 html, body {
-  background-color: #E8E8E8;
+  background-color: #EFEFEF;
 }
 
 a, a:hover {
